<resources>
    <string name="app_name">NEFT</string>
    <string name="squetext">Square</string>
    <string name="nefttext">NEFT</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="phonenumber">Phone Number</string>
    <string name="plus7">+7</string>
    <string name="Passwordtext">Password</string>
    <string name="getsmstext">Get SMS</string>
    <string name="create_login">Придумайте Ваш Логин</string>
    <string name="sponsorloginenteretext">Логин того, кто Вас присгласил</string>
    <string name="testLoginru">Проверить Логин спонсора</string>
    <string name="testLogin">Проверить Логин</string>
    <string name="signuptextru">Зарегистрироваться</string>
    <string name="lookaroundtext">LOOK AROUND</string>
    <string name="peopletext">People</string>
    <string name="clubtext">Club</string>
    <string name="notsmstext">Не получили смс? Отправить снова</string>
    <string name="chatstextru">ЧАТЫ</string>
    <string name="messagestextru">Сообщения</string>
    <string name="friendstextru">Друзья</string>
    <string name="createpassword">Придумайте пароль</string>
    <string name="repeatpasswordtext">Повторите пароль</string>
    <string name="messagetext3">сообщение</string>
    <string name="userid">Логин</string>
    <string name="status">Статус</string>
    <string name="hobbies">Увлечения</string>
    <string name="realtionship">Отношения</string>
    <string name="location">Локация</string>
    <string name="about">About</string>
    <string name="notificationtext">NOTIFICATION</string>
    <string name="notificationtv">Notification</string>
    <string name="requeststext">Запросы</string>
    <string name="canceltext">Отменить</string>
    <string name="accepttext">Подтвердить</string>
    <string name="myprofiletext">PROFILE</string>
    <string name="accaunttext">Аккаунт</string>
    <string name="preftext">Настройки</string>
    <string name="notificationstext">Уведомления</string>
    <string name="passcodelocktext">Код блокировки</string>
    <string name="privacytext">Настройки приватности</string>
    <string name="feedbacktext">Обратная связь</string>
    <string name="abouttextru">О приложении</string>
    <string name="paytesttext">Оплата Тест</string>
    <string name="premiumtext">PREMIUM</string>
    <string name="messagecopy">ID скопирован в буфер обмена</string>
    <string name="partnerstext">Партнёры</string>
    <string name="buytext">Покупки</string>
    <string name="historytext">История</string>
    <string name="mentext">Мужчина</string>
    <string name="womentext">Женщина</string>
    <string name="testbuynew">Купить карту тест 1000 баллов</string>
    <string name="addmoneytest">Добавить баллов тест</string>
    <string name="filtertext">filter</string>
    <string name="exittext">Выход</string>
</resources>
