<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundj"
    tools:context=".SignIn">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/montserratbold"
        android:gravity="center_horizontal"
        android:text="@string/nefttext"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="122dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="380dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/phonenumber"
            android:textColor="@color/textgrey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:fontFamily="@font/montserratregular"
            android:inputType="phone"
            android:text="@string/plus7"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/getsmsbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/getsmstext"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/Passwordtext"
            android:textColor="@color/textgrey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText_cod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:fontFamily="@font/montserratregular"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/notsmstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/montserratmedium"
            android:gravity="right"
            android:text="@string/notsmstext"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>