<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_background2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/screennametv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:fontFamily="@font/montserratmedium"
                android:padding="20dp"
                android:text="@string/filtertext"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/menubtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@android:drawable/btn_dialog" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelbtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="20dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@drawable/roundedwhite"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/canceltext"
                android:textAllCaps="false"
                android:textColor="@color/buttons_recom_color"
                android:textSize="12sp" />

            <Button
                android:id="@+id/okbtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/accepttext"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
