<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background2"
    tools:context=".ChatsFriends"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/screennametv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="@font/montserratmedium"
                android:padding="20dp"
                android:text="@string/chatstextru"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/plusbtn"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/plusicon" />

            <ImageButton
                android:id="@+id/lupabtn"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/lupaicon" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/messagetvbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserratmedium"
                android:gravity="center"
                android:padding="20dp"
                android:scaleX="1"
                android:scaleY="0.8"
                android:text="@string/messagestextru"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/friendstvbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserratmedium"
                android:gravity="center"
                android:padding="20dp"
                android:scaleX="1"
                android:scaleY="0.8"
                android:text="@string/friendstextru"
                android:textColor="@android:color/black"
                android:textSize="22sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@color/buttons_recom_color"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="44dp"
                android:layout_height="41dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/RecView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">


            </android.support.v7.widget.RecyclerView>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <ImageButton
            android:id="@+id/findiconbtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="20dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icfind" />

        <ImageButton
            android:id="@+id/messagebtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="20dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icmessagesgreen" />

        <ImageButton
            android:id="@+id/friendsbtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="20dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icchats" />

        <ImageButton
            android:id="@+id/noticbtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="20dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icnotification" />

        <ImageButton
            android:id="@+id/profilbtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="20dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icprofile" />
    </LinearLayout>


</LinearLayout>
